[package]
name = "wick"
version = "0.7.0"
edition = "2021"
description = "Browser-grade web access for AI agents"
license = "MIT"
repository = "https://github.com/wickproject/wick"

[features]
# Enable Cronet for Chrome-identical TLS/HTTP2/QUIC fingerprinting.
# Without this, falls back to reqwest (rustls TLS — detectable).
cronet = []

[dependencies]
rmcp = { version = "1.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal", "sync", "time", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "gzip", "brotli", "deflate", "socks", "json", "blocking"] }
readability = "0.3"
htmd = "0.5"
robotstxt = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
url = "2"
scraper = "0.26.0"
urlencoding = "2.1.3"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[build-dependencies]
cc = "1.0"
